# CodeNowHere

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Main.cpp  Makefile.am  README.md  add_to_win_user_path.nsh  autogen.sh  build_local.sh  cmake_uninstall.cmake.in  configure.ac  data.json  linux_debug.sh  linux_release.sh  makefile  rundocker.cmd  win_debug.cmd  win_release.cmd
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
extdata/: InlineComments.txt  PLSQL.tpl  ada.tpl  agda.tpl  alef.tpl  b.tpl  bash.tpl  c#.tpl  c++.tpl  c.tpl  ceylon.tpl  clojure.tpl  cobol.tpl  cobra.tpl  coffeescript.tpl  coldfusion.tpl  cpp.tpl  crystal.tpl  css.tpl  d.tpl  dart.tpl  ecmascript.tpl  egison.tpl  elm.tpl  erlang.tpl  euphoria.tpl  factor.tpl  falcon.tpl  fortran.tpl  fp.tpl  gap.tpl  groovy.tpl  haskell.tpl  html.tpl  icon.tpl  imba.tpl  io.tpl  j.tpl  java.tpl  javascript.tpl  (+22 more)
headers/: BunchFileBehavior.h  CodeNowHere.h  Helper.h  ICommandBehavior.h  ManyFileBehavior.h  OnlyFileBehavior.h  cnh_structs.h  cnhengine.h  injawrap.h
src/: BunchFileBehavior.cpp  CMakeLists.txt  CodeNowHere.cpp  Helper.cpp  ICommandBehavior.cpp  Makefile.am  ManyFileBehavior.cpp  OnlyFileBehavior.cpp  cnh_structs.cpp  cnhengine.cpp  docopt.cpp  injawrap.cpp
templates/: aaa_unknow.tpl  ada.tpl  agda.tpl  alef.tpl  applescript.tpl  awk.tpl  b.tpl  bash.tpl  boo.tpl  c#.tpl  c++.tpl  c.tpl  ceylon.tpl  clojure.tpl  cobol.tpl  cobra.tpl  coffeescript.tpl  coldfusion.tpl  crystal.tpl  css.tpl  d.tpl  dart.tpl  e.tpl  ecmascript.tpl  egison.tpl  elixir.tpl  elm.tpl  erlang.tpl  euphoria.tpl  f#.tpl  factor.tpl  falcon.tpl  fortran.tpl  fp.tpl  gap.tpl  gnuplot.tpl  go.tpl  gosu.tpl  groovy.tpl  h++.tpl  (+46 more)
tests/: AllTests.cpp  CMakeLists.txt  ICommandBehaviorTest.h  Makefile.am
